Version 2.7 - coming soon
    - Added installation support and auto package detection via CMake
      find_package(qpp REQUIRED)
    - Simplified installation instructions ["INSTALL.md"]
    - Added BB84 example ["examples/BB84.cpp"]
    - Added CircleCI continuous integration
    - CMake minimum required version bumped to 3.12 for automatic unit tests
      detection by CMake and other CMake-related "good practices"
    - Unit testing and examples are now separate CMake targets, one needs to
      explicitly type 'make unit_testing' and/or 'make examples' to build the
      unit testing suite and/or the examples, respectively
    - Simplified unit testing, now one can run tests with 'ctest' or
      'make test' (after explicitly built with 'make unit_testing'). Use
      'GTEST_COLOR=1 ARGS="-V" make test' or 'GTEST_COLOR=1 ctest -V' for
      coloured verbose testing output.
    - Fixed minor inadvertence in OpenQASM `crz` implementation, see
      https://github.com/softwareQinc/qpp/issues/99
    - Changed the signature of qpp::cwise() ["functions.hpp"] so it takes the
      scalar argument by value (and not constant reference as before). This
      avoids an internal compiler error (ICE) triggered when compiling
      "examples/functor.cpp" in MinGW.
    - Removed <iostream> implicit dependencies ["qpp.h"]
    - Added optional "context" to qpp::Exception ["classes/exception.hpp"]
    - Made qpp::QCircuit default-constructible ["classes/circuits/circuits.hpp"]
      so it constructs by default a 1-qubit circuit with no classical bits
    - qpp::QEngine::reset() now accepts a default argument
      'bool reset_stats = true' and cleans the engine's statistics by default
      ["classes/circuits/engines.hpp"]
    - Renamed ["examples/qasm/qasm1.cpp"] and ["examples/qasm/qasm2.cpp"]
      to ["examples/qasm/qasm_teleport_minimal.cpp"] and
      ["examples/qasm/qasm.cpp"]; the latter executes an arbitrary OpenQASM